# bazel-ts

./: .bazelrc  MODULE.bazel  tsconfig.json
project/: BUILD.bazel  lib.ts  other.ts  tsconfig.json
