module(name = "bazel-ts")

bazel_dep(name = "aspect_rules_swc", version = "2.0.0-rc0")

bazel_dep(name = "aspect_rules_ts", version = "2.4.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = True)

rules_ts_ext.deps()

use_repo(rules_ts_ext, "npm_typescript")
