load("@aspect_rules_swc//swc:defs.bzl", "swc")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

write_file(
    name = "code_generation",
    out = "generated.ts",
    content = [
        "export const uniqueStringName: string = 'asd'",
    ],
)

ts_project(
    name = "project",
    out_dir = "auto",
    transpiler = swc,
    declaration = True,
    tsconfig = "//:tsconfig",
    srcs = [
        "lib.ts",
        "other.ts",
        "generated.ts",
    ]
)
